# UltraCore

./: .coveragerc-security  .env.example  .gitignore  .pre-commit-config.yaml  COMPLETE_OPTIMIZATION_FLOW.md  Dockerfile.optimization_service  ESG_DEPLOYMENT_GUIDE.md  ESG_MODULE_COMPLETE.md  ESG_OPTIMIZATION_INTEGRATION_PLAN.md  ESG_QUICK_REFERENCE.md  ETF_DATA_SYSTEM.md  ETF_QUICKSTART.md  LICENSE  MANIFEST.in  MASTER_PORTFOLIO_OPTIMIZATION.md  MCP_SERVER_ARCHITECTURE.md  MCP_SERVER_README.md  OPERATIONS_PORTAL_DESIGN.md  OPERATIONS_PORTAL_TECHNICAL_SPEC.md  PHASE8_TODO.md  POD_COVERAGE_ANALYSIS.md  QUICK_START.md  REACT_ADMIN_MIGRATION_PROGRESS.md  README-KAFKA.md  README.md  RL_AGENTS_COMPLETE.md  RL_AGENT_ARCHITECTURE.md  SECURITY.md  STATUS_REPORT.md  ULTRACARE_ESG_MODULE_DESIGN.md  ULTRAGROW_DESIGN.md  ULTRAGROW_SECURED_LENDING_DESIGN.md  ULTRAGROW_SECURED_LENDING_TECHNICAL_SPEC.md  ULTRAGROW_TECHNICAL_SPEC.md  ULTRAOPTIMISER_ETF_INTEGRATION.md  ULTRAOPTIMISER_METHODOLOGY.md  ULTRAWEALTH_POD_ARCHITECTURE.md  ULTRAWEALTH_SUMMARY.md  VPN_TEST_INSTRUCTIONS.md  agentic_frameworks_presentation_content.md  (+37 more)
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
agentic_frameworks_presentation/: slide_01_hybrid_architecture.html  slide_02_framework_analysis.html  slide_02_framework_analysis_cont.html  slide_03_phase_1_anya.html  slide_03_phase_1_anya_cont.html  slide_04_phase_2_3_automation.html  slide_04_phase_2_3_automation_cont.html  slide_05_keep_the_core.html  slide_state.json
deployment/: deploy_investor_management.ps1  deploy_ultrawealth.ps1  (+3 more)
(+442 files in other folders)
